--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@
 		<div class="container">
 			<div class="footer__inner">
 				<div class="footer__col">
+					<div class="footer__logo">QuRo</div>
+					<div class="footer__text">Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла</div>
+					
 					<div class="footer__logo">QuRo</div><div class="footer__social">
 						Вы можете найти нас тут:
 						<a href="#" target="_blank"><img src="assets/img/post.png" width="24px" alt=""></a>
