--- a/index.html
+++ b/index.html
@@ -205,34 +205,13 @@
 		</div>
 	</section>
 
-	<section class="section">
-		<div class="container">
-				<div class="section__header">
-					<h3 class="section__suptitle">Как с нами связаться?</h3>
-				<h2 class="section__title">Оставьте заявку</h2>
-			</div>
-			<form action="#" class="form">
-			<div class="form__group">
-				<input slass="name">
-				<label class="form__label">Ваше имя</label>
-			</div>
-			<div class="form__group">
-				<input slass="name">
-				<label class="form__label">Ваша почта</label>
-			</div>
-			<button class="form__button">Отправить</button>
-
-			</form>
-		</div>
-	</section>
-
 	<a name="contact"></a>
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__inner">
 				<div class="footer__col">
 					<div class="footer__logo">QuRo</div>
-					<div class="footer__text">Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла</div>
+					<div class="footer__text">Quality Robotics - без притензий на оригинальность, но с притензией на качество.</div>
 					
 					<div class="footer__logo">QuRo</div><div class="footer__social">
 						Вы можете найти нас тут:
