--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			</div>
 			<div class="cobot">
 				<div class="cobot__item">
-					<img src="assets/img/cobot1.png" width="648px" alt="">
+					<img src="cobot-v-4-0 v1.png" width="648px" alt="">
 				</div>
 				<div class="cobot__item">
 					<div class="accordion">
