--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 								<a href="" onClick="toggA(this);return false;" class="accordion__title">Программное обеспечение QURO JUNIOR</a></div>
 							<div id="junior1" class="accordion__content">
 								<p>Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла1</p>
-								<a href="files/QURO JUNIOR.zip" style="btn__download" download=""><button>Скачать программное обеспечение QURO_JUNIOR</button></a></a>
+								<a href="files/QURO JUNIOR.zip" class="btn__download" download=""><button>Скачать программное обеспечение QURO_JUNIOR</button></a></a>
 							</div>
 						</div>
 						<div class="accordion__item">
@@ -158,7 +158,7 @@
 							</div>
 							<div id="junior2" class="accordion__content">
 								<p>Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла2</p>
-								<a href="" download=""><button style="btn__download">Скачать прошивку QURO_JUNIOR.ino</button></a>
+								<a href="" download=""><button class="btn__download">Скачать прошивку QURO_JUNIOR.ino</button></a>
 							</div>
 						</div>
 						<div class="accordion__item">
@@ -169,7 +169,7 @@
 							</div>
 							<div id="junior3" class="accordion__content">
 								<p>Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла3</p>
-								<a href="" download=""><button style="btn__download">Скачать документацию к QURO JUNIOR</button></a>
+								<a href="" download=""><button class="btn__download">Скачать документацию к QURO JUNIOR</button></a>
 							</div>
 							<script>
 								function toggA(a){
@@ -195,7 +195,7 @@
 								<img class="accordion__icon" src="assets/img/code.png" height="50%" alt="">
 
 								Все файлы QURO JUNIOR в одном zip ->
-								<a href="" download=""><button>Скачать полный zip</button></a>
+								<a href="" download=""><button  class="btn__download">Скачать полный zip</button></a>
 								</div>
 							</div>
 						</div>
