--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					<div class="footer__logo">QuRo</div><div class="footer__social">
 					<div class="footer__text">Quality Robotics - без притензий на оригинальность, но с притензией на качество.</div>
 						Вы можете найти нас тут:
-						<a href="mailto:ivan.noskov.it@gmail.com" target="_blank"><img src="assets/img/post.png" width="24px" alt=""></a>
+						<a href="mailto:ivan.noskov.it@gmail.com?subject=QuRo, доброго времени суток!" target="_blank"><img src="assets/img/post.png" width="24px" alt=""></a>
 					</div>
 				</div>
 			</div>
