--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>QuRo</title>
+	<meta name="keywords" content="роботы коллаборативные роботы кобот коллаборативный робот quro quality robotics qualityrobotics промышленный робот учебный робот производство робототехника качество качественная робототехника">
 </head>
 <body>
 	<header class="header">
