--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" href="assets/images/icon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="assets/img/icon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>QuRo</title>
 	<meta name="keywords" content="роботы коллаборативные роботы кобот коллаборативный робот quro quality robotics qualityrobotics промышленный робот учебный робот производство робототехника качество качественная робототехника">
