--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 								<a href="" onClick="toggA(this);return false;" class="accordion__title">Программное обеспечение QURO JUNIOR</a></div>
 							<div id="junior1" class="accordion__content">
-								<p>Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла1</p>
+								<p>Программное обеспечение QURO COMPANIES позволяет воплощать технические решения для вашего производства/логистического предприятия. Программа позволяет задать программу для кобота и сразу перепрошить его.</p>
 								<a href="files/QURO JUNIOR.zip" class="btn__download" download=""><button>Скачать программное обеспечение QURO_JUNIOR</button></a></a>
 							</div>
 						</div>
@@ -159,7 +159,7 @@
 								<a href="" onClick="toggB(this);return false;" class="accordion__title">Стандартная прошивка QURO_JUNIOR.ino</a>
 							</div>
 							<div id="junior2" class="accordion__content">
-								<p>Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла2</p>
+                                                                <p>!Для стандартного использования кобота этот файл не необходим! Прошивка для линейки COMPANIES нужна для решения технических проблем и полной перепрошивки микроконтроллера коллаборативного робота.</p>
 								<a href="" download=""><button class="btn__download">Скачать прошивку QURO_JUNIOR.ino</button></a>
 							</div>
 						</div>
@@ -170,7 +170,7 @@
 								<a href="" onClick="toggC(this);return false;" class="accordion__title">Документация QURO JUNIOR</a>
 							</div>
 							<div id="junior3" class="accordion__content">
-								<p>Бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла-бла3</p>
+                                                                <p>В файле с документацией находятся все необходимые инструкции по сборке, эксплуатированию и использовании программного обеспечения.</p>
 								<a href="" download=""><button class="btn__download">Скачать документацию к QURO JUNIOR</button></a>
 							</div>
 							<script>
@@ -196,7 +196,7 @@
 								<div class="accordion__title">
 								<img class="accordion__icon" src="assets/img/code.png" height="50%" alt="">
 
-								Все файлы QURO JUNIOR в одном zip ->
+								Все файлы QURO COMPANIES в одном zip ->
 								<a href="" download=""><button  class="btn__download">Скачать полный zip</button></a>
 								</div>
 							</div>
