--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								<a href="" onClick="toggA(this);return false;" class="accordion__title">Программное обеспечение QURO JUNIOR</a></div>
 							<div id="junior1" class="accordion__content">
 								<p>Программное обеспечение QURO COMPANIES позволяет воплощать технические решения для вашего производства/логистического предприятия. Программа позволяет задать программу для кобота и сразу перепрошить его.</p>
-								<a href="files/QURO JUNIOR.zip" class="btn__download" download=""><button>Скачать программное обеспечение QURO_JUNIOR</button></a></a>
+								<a href="files/QURO JUNIOR.zip" download=""><button class="btn__download">Скачать программное обеспечение QURO_JUNIOR</button></a></a>
 							</div>
 						</div>
 						<div class="accordion__item">
