--- a/PO.html
+++ b/PO.html
@@ -52,7 +52,7 @@
           ПО
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="PO.html">Загрузить ПО</a>
+          <a class="dropdown-item" href="#">Загрузить ПО</a>
           <a class="dropdown-item disabled" href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Дополнительное ПО</a>
@@ -69,71 +69,69 @@
   </div>
   </nav>
 
-  <div class="container-fluid d-flex h-100 justify-content-center align-items-center p-0">
-      <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal">Добро пожаловать в QuRo</h1>
-        <!--<p class="lead font-weight-normal pt-4">Производственная и образовательная робототехника.</p>-->
-        <p id="demo" class="lead font-weight-normal pt-4"></p>
-        <div id="typed-strings">
-  <!-- Сюда помещаем текст для вывода -->
-</div>
-<span id="typed" style="white-space: pre;"></span>
+
+<main role="main" class="container">
+      <div class="jumbotron">
+        <h1>Последняя версия</h1>
+        <p class="lead">Здесь можно загрузить установщик последней версии. Если Вам нужна более ранняя версия, смотрите ниже.»</p>
+        <a class="btn btn-lg btn-primary" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО</a>
       </div>
-    </div>
+    </main>
+<main role="main" class="container">
+      <div class="row">
+        <div class="col-md-8 blog-main">
 
 
+          <div class="blog-post">
+            <h2 class="blog-post-title">1.0 версия</h2>
+            <p class="blog-post-meta">Декабрь 10, 2021</p>
+
+            <p>Первая версия ПО со всеми минимальными возможностями.</p>
+
+            <h3>Что реализовано</h3>
+            <p>Следующие функции реализованы:</p>
+            <ul>
+              <li>Создание нового проекта.</li>
+              <li>Открытие сохраненного проекта.</li>
+              <li>Сохранение проекта.</li>
+              <li>Открытие порта соединения с коботом.</li>
+              <li>Закрытие порта соединения с коботом.</li>
+              <li>Обновление списка портов.</li>
+              <li>Добавление контрольных точек.</li>
+              <li>Редактирование контрольных точек.</li>
+              <li>Загрузка проекта.</li>
+              <li>Светлая и темная тема.</li>
+              <li>Документация к ПО.</li>
+              <li>Связаться с поддержкой ПО.</li>
+              <li>Проверить обновления.</li>
+              <li>О программе.</li>
+            </ul>
+
+          </div><!-- /.blog-post -->
+
+        </div><!-- /.blog-main -->
+
+        <aside class="col-md-4 blog-sidebar">
+          <div class="p-3 mb-3 bg-light rounded">
+            <h4 class="font-italic">О программе</h4>
+            <p class="mb-0">Программа QURO позволяет управлять коллаборативным роботом в реальном времени или создавать программу для кобота с помощью контрольных точек. </p>
+          </div>
+
+          <div class="p-3">
+            <h4 class="font-italic">Версии:</h4>
+            <ol class="list-unstyled mb-0">
+              <li><a href="#">Декабрь 2021</a></li>
+            </ol>
+          </div>
 
 
+        </aside><!-- /.blog-sidebar -->
+
+      </div><!-- /.row -->
+
+    </main>
 
 
-
-
-
-
-    <script>function writeTextByJS(id, text, speed){
-
-    var ele = document.getElementById(id),
-      txt = text.join("").split("");
-      var flag = true
-
-  var interval = setInterval(function(){
-
-      if(!txt[0]){
-      		const func = () => {
-
-          if(flag == true){
-            var txt1 = document.getElementById(id).innerHTML + "|"
-            flag = false
-            ele.innerHTML = txt1;
-          }
-          else if(flag == false){
-            var txt1 = document.getElementById(id).innerHTML.substr(0, 49)
-            flag = true
-            ele.innerHTML = txt1;
-          }
-};
-for (let i = 0; i < 14; i++) { // выведет 0, затем 1, затем 2
-  setTimeout(func, (i * 500));
-}
-            return clearInterval(interval);
-     };
-
-      ele.innerHTML += txt.shift();
-   }, speed != undefined ? speed : 90);
-
-
-
-
-return false;
-};
-
-writeTextByJS(
-  "demo",
-   [
-       "Производственная и образовательная робототехника."
-    ]
-);
-</script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
