--- a/index.html
+++ b/index.html
@@ -13,15 +13,90 @@
      <style>
 
         html, body {
-            height: 50vh;
+            height: 100vh;
+            background-color: #040404;
+            background-image: url('assets/img/layer_2 (2).png');
         }
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #23202a;
+  position: relative;
+}
+.container {
+  max-width: 1140px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+.section {
+  text-align: center;
+  padding: 64px 0;
+}
+.h2 {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+.image {
+  margin-bottom: 32px;
+}
+.image a {
+  border-radius: 8px;
+  max-width: 512px;
+  width: 100%;
+  height: 300px;
+  display: block;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.image img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.text {
+  font-size: 18px;
+  max-width: 512px;
+  margin: 0 auto;
+}
+
+/* Начальные стили для элемента, который будет следовать за курсором, в нашем случае небольшой кружок */
+.follow-cursor {
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: 1px solid
+#ff6600;
+  border-radius: 50%;
+  transform: translateY(-50%) translateX(-50%); /* центрируем кружок */
+  position: absolute; /* задаём абсолютное позиционирование, чтобы элемент не влиял на остальные элементы и его можно было бы позиционировать следом за курсором */
+  z-index: 999; /* чтобы элемент был над остальными элементами */
+  pointer-events: none; /* чтобы сквозь элемент можно было взаимодействовать с элементами, находящимися под ним */
+  transition: width 0.64s, height 0.64s, border-radius 0.64s, background 0.64s;
+}
+
+/* Активный класс для кружка при наведении на ссылку */
+.follow-cursor_active {
+  height: 128px;
+  width: 128px;
+  border-width: 2px;
+  background: rgba(255,102,0,0.32);
+}
+
+/* Скрываем декоративный элемент при ширине браузера меньше 992px */
+@media (max-width: 991.98px) {
+  .follow-cursor {
+    display: none;
+  }
+}
 
     </style>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-  <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <a class="navbar-brand" href="index.html" style="color: #ff6400">
+  <img src="assets/img/QuRo logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
   QuRo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -30,33 +105,33 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Главная<span class="sr-only">(current)</span></a>
+        <a class="nav-link text-light" href="index.html">Главная<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">О нас</a>
+        <a class="nav-link text-light" href="#about">О нас</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Коботы
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">QR-1</a>
-          <a class="dropdown-item disabled" href="#">QR-2</a>
+        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item text-light" href="#">QR-1</a>
+          <a class="dropdown-item disabled text-light" href="#">QR-2</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Документация</a>
-          <a class="dropdown-item" href="#"></a>
+          <a class="dropdown-item text-light" href="#">Документация</a>
+          <a class="dropdown-item text-light" href="#"></a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           ПО
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="PO.html">Загрузить ПО</a>
-          <a class="dropdown-item disabled" href="#">Документация к ПО</a>
+        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item text-light" href="PO.html">Загрузить ПО</a>
+          <a class="dropdown-item disabled text-light" href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Дополнительное ПО</a>
-          <a class="dropdown-item" href="#"></a>
+          <a class="dropdown-item text-light" href="#">Дополнительное ПО</a>
+          <a class="dropdown-item text-light" href="#"></a>
         </div>
       </li>
 
@@ -67,9 +142,9 @@
 
   <div class="container-fluid d-flex h-100 justify-content-center align-items-center p-0">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 font-weight-normal">Добро пожаловать в QuRo</h1>
+        <h1 class="display-4 font-weight-normal" style="color: #ff6400">Добро пожаловать в QuRo</h1>
         <!--<p class="lead font-weight-normal pt-4">Производственная и образовательная робототехника.</p>-->
-        <p id="demo" class="lead font-weight-normal pt-4"></p>
+        <p id="demo" class="lead font-weight-normal pt-4 text-secondary"></p>
         <div id="typed-strings">
   <!-- Сюда помещаем текст для вывода -->
 </div>
@@ -81,39 +156,39 @@
 <a name="about"></a>
 <main role="main">
 
-      <section class="jumbotron text-center">
+      <section class="jumbotron text-center bg-dark">
         <div class="container">
-          <h1 class="jumbotron-heading">Немного о нас</h1>
-          <p class="lead text-muted">Наша компания начала своё существование в июне 2021 года. Мы разрабатываем коллаборативных роботов, или "коботов", а также программное обеспечение для их работы. Основное наше направление - научные разработки и исследования, а не монетизация, по этому компания абсолютно независима и ведёт дружелюбную политику, благодаря чему вы можете повлиять на наше развитие.</p>
+          <h1 class="jumbotron-heading" style="color: #ff6400">Немного о нас</h1>
+          <p class="lead text-light">Наша компания начала своё существование в июне 2021 года. Мы разрабатываем коллаборативных роботов, или "коботов", а также программное обеспечение для их работы. Основное наше направление - научные разработки и исследования, а не монетизация, по этому компания абсолютно независима и ведёт дружелюбную политику, благодаря чему вы можете повлиять на наше развитие.</p>
         </div>
       </section>
 
-      <div class="album py-5 bg-light">
+      <div class="album py-5 bg-dark">
         <div class="container">
 
-          <h3 class="mb-5">Для коботов предполагаются такие сценарии развития, как:</h3>
+          <h2 class="jumbotron-heading text-center mb-4" style="color: #ff6400">Для коботов предполагаются такие сценарии развития, как:</h2>
           <div class="row">
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="/assets/img/about1.png" data-holder-rendered="true">
+              <div class="card mb-4 box-shadow bg-secondary">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="assets/img/about1.png" data-holder-rendered="true">
                 <div class="card-body">
-                  <h5 class="card-text">Обучение детей алгоритмам и программированию</h5>
+                  <h5 class="card-text text-light">Обучение детей алгоритмам и программированию</h5>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
+              <div class="card mb-4 box-shadow bg-secondary">
                 <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="assets/img/about2.png" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
-                  <h5 class="card-text">Изучение инженерного программирования в ВУЗах</h5>
+                  <h5 class="card-text text-light">Изучение инженерного программирования в ВУЗах</h5>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
+              <div class="card mb-4 box-shadow bg-secondary">
                 <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="assets/img/about4.png" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
-                  <h5 class="card-text">Производственно-логистические решения</h5>
+                  <h5 class="card-text text-light">Производственно-логистические решения</h5>
                 </div>
               </div>
             </div>
@@ -126,11 +201,35 @@
     </main>
 
 
-
-
+#ff6400
+#0f0600
+#171717
 
 
     <script>
+      document.addEventListener('DOMContentLoaded', () => {
+
+  const followCursor = () => { // объявляем функцию followCursor
+    const el = document.querySelector('.follow-cursor') // ищем элемент, который будет следовать за курсором
+
+    window.addEventListener('mousemove', e => { // при движении курсора
+      const target = e.target // определяем, где находится курсор
+      if (!target) return
+
+      if (target.closest('a')) { // если курсор наведён на ссылку
+        el.classList.add('follow-cursor_active') // элементу добавляем активный класс
+      } else { // иначе
+        el.classList.remove('follow-cursor_active') // удаляем активный класс
+      }
+
+      el.style.left = e.pageX + 'px' // задаём элементу позиционирование слева
+      el.style.top = e.pageY + 'px' // задаём элементу позиционирование сверху
+    })
+  }
+
+  followCursor() // вызываем функцию followCursor
+
+})
       function writeTextByJS(id, text, speed){
 
     var ele = document.getElementById(id),
@@ -179,5 +278,6 @@ writeTextByJS(
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div class="follow-cursor"></div>
   </body>
 </html>
