--- a/PO.html
+++ b/PO.html
@@ -13,15 +13,87 @@
      <style>
 
         html, body {
-            height: 100vh;
+            background-color: #040404;
+            color: #fff;
         }
+body {
+  font-family: 'Roboto', sans-serif;
+  position: relative;
+}
+.container {
+  max-width: 1140px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+.section {
+  text-align: center;
+  padding: 64px 0;
+}
+.h2 {
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+.image {
+  margin-bottom: 32px;
+}
+.image a {
+  border-radius: 8px;
+  max-width: 512px;
+  width: 100%;
+  height: 300px;
+  display: block;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.image img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.text {
+  font-size: 18px;
+  max-width: 512px;
+  margin: 0 auto;
+}
 
+/* Начальные стили для элемента, который будет следовать за курсором, в нашем случае небольшой кружок */
+.follow-cursor {
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: 1px solid
+#ff6600;
+  border-radius: 50%;
+  transform: translateY(-50%) translateX(-50%); /* центрируем кружок */
+  position: absolute; /* задаём абсолютное позиционирование, чтобы элемент не влиял на остальные элементы и его можно было бы позиционировать следом за курсором */
+  z-index: 999; /* чтобы элемент был над остальными элементами */
+  pointer-events: none; /* чтобы сквозь элемент можно было взаимодействовать с элементами, находящимися под ним */
+  transition: width 0.64s, height 0.64s, border-radius 0.64s, background 0.64s;
+}
+
+/* Активный класс для кружка при наведении на ссылку */
+.follow-cursor_active {
+  height: 128px;
+  width: 128px;
+  border-width: 2px;
+  background: rgba(255,102,0,0.32);
+}
+
+/* Скрываем декоративный элемент при ширине браузера меньше 992px */
+@media (max-width: 991.98px) {
+  .follow-cursor {
+    display: none;
+  }
+}
     </style>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-  <img src="/assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+  <a class="navbar-brand" href="index.html" style="color: #ff6400">
+  <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top" alt="">
   QuRo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -33,13 +105,13 @@
         <a class="nav-link" href="index.html">Главная<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">О нас</a>
+        <a class="nav-link" href="index.html#about">О нас</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Коботы
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">QR-1</a>
           <a class="dropdown-item disabled" href="#">QR-2</a>
           <div class="dropdown-divider"></div>
@@ -51,7 +123,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           ПО
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Загрузить ПО</a>
           <a class="dropdown-item disabled" href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
@@ -62,19 +134,16 @@
 
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Контакты" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
-    </form>
+
   </div>
   </nav>
 
-
-<main role="main" class="container">
-      <div class="jumbotron">
-        <h1>Последняя версия</h1>
+<div>
+<main role="main" class="container mt-4">
+      <div class="jumbotron bg-dark">
+        <h1 style="color: #ff6400">Последняя версия</h1>
         <p class="lead">Здесь можно загрузить установщик последней версии. Если Вам нужна более ранняя версия, смотрите ниже.»</p>
-        <a class="btn btn-lg btn-primary" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО</a>
+        <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО</a>
       </div>
     </main>
 <main role="main" class="container">
@@ -83,7 +152,7 @@
 
 
           <div class="blog-post">
-            <h2 class="blog-post-title">1.0 версия</h2>
+            <h2 style="color: #ff6400" class="blog-post-title">1.0 версия</h2>
             <p class="blog-post-meta">Декабрь 10, 2021</p>
 
             <p>Первая версия ПО со всеми минимальными возможностями.</p>
@@ -112,15 +181,15 @@
         </div><!-- /.blog-main -->
 
         <aside class="col-md-4 blog-sidebar">
-          <div class="p-3 mb-3 bg-light rounded">
-            <h4 class="font-italic">О программе</h4>
+          <div class="p-3 mb-3 bg-dark rounded">
+            <h4 class="font-italic" style="color: #ff6400">О программе</h4>
             <p class="mb-0">Программа QURO позволяет управлять коллаборативным роботом в реальном времени или создавать программу для кобота с помощью контрольных точек. </p>
           </div>
 
           <div class="p-3">
             <h4 class="font-italic">Версии:</h4>
             <ol class="list-unstyled mb-0">
-              <li><a href="#">Декабрь 2021</a></li>
+              <li><a href="https://disk.yandex.ru/d/u1mnWix3Hja85w" style="color: #ff6400">Декабрь 2021</a></li>
             </ol>
           </div>
 
@@ -130,11 +199,39 @@
       </div><!-- /.row -->
 
     </main>
+</div>
+<script>
+  var num = Math.ceil(Math.random() * 7)
+      document.body.background = 'assets/img/layer' + num + '.png'
+    document.addEventListener('DOMContentLoaded', () => {
+
+  const followCursor = () => { // объявляем функцию followCursor
+    const el = document.querySelector('.follow-cursor') // ищем элемент, который будет следовать за курсором
+
+    window.addEventListener('mousemove', e => { // при движении курсора
+      const target = e.target // определяем, где находится курсор
+      if (!target) return
+
+      if (target.closest('a')) { // если курсор наведён на ссылку
+        el.classList.add('follow-cursor_active') // элементу добавляем активный класс
+      } else { // иначе
+        el.classList.remove('follow-cursor_active') // удаляем активный класс
+      }
+
+      el.style.left = e.pageX + 'px' // задаём элементу позиционирование слева
+      el.style.top = e.pageY + 'px' // задаём элементу позиционирование сверху
+    })
+  }
+
+  followCursor() // вызываем функцию followCursor
+
+})</script>
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<div class="follow-cursor"></div>
   </body>
 </html>
