--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="yandex-verification" content="978e93cfe43eb8c3" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="icon" href="assets/img/QuRologo.png" type="image/x-icon">
     <title>QuRo</title>
 
      <style>
@@ -155,14 +156,14 @@ body {
 <a name="about"></a>
 <main role="main">
 
-      <section class="jumbotron text-center bg-dark">
+      <section class="jumbotron text-center" style="background: rgba(52, 58, 64, .5);">
         <div class="container">
           <h1 class="jumbotron-heading" style="color: #ff6400">Немного о нас</h1>
           <p class="lead text-light">Наша компания начала своё существование в июне 2021 года. Мы разрабатываем коллаборативных роботов, или "коботов", а также программное обеспечение для их работы. Основное наше направление - научные разработки и исследования, а не монетизация, по этому компания абсолютно независима и ведёт дружелюбную политику, благодаря чему вы можете повлиять на наше развитие.</p>
         </div>
       </section>
 
-      <div class="album py-5 bg-dark">
+      <div class="album py-5" style="background: rgba(52, 58, 64, .5);">
         <div class="container">
 
           <h2 class="jumbotron-heading text-center mb-4" style="color: #ff6400">Для коботов предполагаются такие сценарии развития, как:</h2>
@@ -202,6 +203,52 @@ body {
 
 
 
+<footer class="container py-5">
+      <div class="row">
+        <div class="col-12 col-md">
+          <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top mb-4" alt="">
+          <small class="d-block mb-3 text-muted">© 2017-2018</small>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Features</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Cool stuff</a></li>
+            <li><a class="text-muted" href="#">Random feature</a></li>
+            <li><a class="text-muted" href="#">Team feature</a></li>
+            <li><a class="text-muted" href="#">Stuff for developers</a></li>
+            <li><a class="text-muted" href="#">Another one</a></li>
+            <li><a class="text-muted" href="#">Last time</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Resource</a></li>
+            <li><a class="text-muted" href="#">Resource name</a></li>
+            <li><a class="text-muted" href="#">Another resource</a></li>
+            <li><a class="text-muted" href="#">Final resource</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Resources</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Business</a></li>
+            <li><a class="text-muted" href="#">Education</a></li>
+            <li><a class="text-muted" href="#">Government</a></li>
+            <li><a class="text-muted" href="#">Gaming</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5>About</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Team</a></li>
+            <li><a class="text-muted" href="#">Locations</a></li>
+            <li><a class="text-muted" href="#">Privacy</a></li>
+            <li><a class="text-muted" href="#">Terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 #ff6400
 #0f0600
 #171717
