--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="yandex-verification" content="978e93cfe43eb8c3" />
+    <meta name="google-site-verification" content="IQJemOatH5_Zcuhst_eu3QGsH5TwZO3OGRfQmvDfHfM" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
