--- a/PO.html
+++ b/PO.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="yandex-verification" content="978e93cfe43eb8c3" />
+    <meta name="google-site-verification" content="IQJemOatH5_Zcuhst_eu3QGsH5TwZO3OGRfQmvDfHfM" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -140,7 +141,7 @@ body {
 
 <div>
 <main role="main" class="container mt-4">
-      <div class="jumbotron bg-dark">
+      <div class="jumbotron" style="background: rgba(52, 58, 64, .5);">
         <h1 style="color: #ff6400">Последняя версия</h1>
         <p class="lead">Здесь можно загрузить установщик последней версии. Если Вам нужна более ранняя версия, смотрите ниже.»</p>
         <a class="btn btn-lg btn-light" href="https://disk.yandex.ru/d/u1mnWix3Hja85w" role="button">Скачать ПО</a>
@@ -181,7 +182,7 @@ body {
         </div><!-- /.blog-main -->
 
         <aside class="col-md-4 blog-sidebar">
-          <div class="p-3 mb-3 bg-dark rounded">
+          <div class="p-3 mb-3 rounded" style="background: rgba(52, 58, 64, .5);">
             <h4 class="font-italic" style="color: #ff6400">О программе</h4>
             <p class="mb-0">Программа QURO позволяет управлять коллаборативным роботом в реальном времени или создавать программу для кобота с помощью контрольных точек. </p>
           </div>
