--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="yandex-verification" content="978e93cfe43eb8c3" />
     <meta name="google-site-verification" content="IQJemOatH5_Zcuhst_eu3QGsH5TwZO3OGRfQmvDfHfM" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="QuRo - небольшая компания, разрабатывающая производственную и образовательную робототехнику. На нашем сайте можно найти наше бесплатное программное обеспечение, условия сотрудничества, возможность инвестировать в разработки."/>
+    <meta content="робот робототехника QuRo quro QURO qualityrobotics quality robotics образование оброазовательная качество качественная роботов производство производственная программное обеспечение" name="keywords"/>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" href="assets/img/QuRologo.png" type="image/x-icon">
