--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="icon" href="assets/img/QuRologo.png" type="image/x-icon">
-    <title>QuRo</title>
+    <title>QuRo — производственная и образовательная робототехника.</title>
 
      <style>
 
@@ -96,7 +96,7 @@ body {
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand" href="index.html" style="color: #ff6400">
+  <a class="navbar-brand " href="index.html" style="color: #ff6400">
   <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top" alt="">
   QuRo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,33 +106,33 @@ body {
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link " href="index.html">Главная<span class="sr-only">(current)</span></a>
+        <a class="nav-link" style="color: #A9A9A9;" href="index.html">Главная<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#about">О нас</a>
+        <a class="nav-link text-secondary" href="index.html#about">О нас</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-secondary " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Коботы
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item " href="#">QR-1</a>
-          <a class="dropdown-item disabled " href="#">QR-2</a>
+          <a class="dropdown-item text-secondary " href="#">QR-1</a>
+          <a class="dropdown-item disabled text-secondary " href="#">QR-2</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item " href="#">Документация</a>
-          <a class="dropdown-item " href="#"></a>
+          <a class="dropdown-item text-secondary " href="#">Документация</a>
+          <a class="dropdown-item text-secondary " href="#"></a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-secondary " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           ПО
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item " href="PO.html">Загрузить ПО</a>
-          <a class="dropdown-item disabled " href="#">Документация к ПО</a>
+          <a class="dropdown-item text-secondary " href="PO.html">Загрузить ПО</a>
+          <a class="dropdown-item disabled text-secondary " href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item " href="#">Дополнительное ПО</a>
-          <a class="dropdown-item " href="#"></a>
+          <a class="dropdown-item text-secondary " href="#">Дополнительное ПО</a>
+          <a class="dropdown-item text-secondary " href="#"></a>
         </div>
       </li>
 
@@ -164,6 +164,30 @@ body {
           <p class="lead text-light">Наша компания начала своё существование в июне 2021 года. Мы разрабатываем коллаборативных роботов, или "коботов", а также программное обеспечение для их работы. Основное наше направление - научные разработки и исследования, а не монетизация, по этому компания абсолютно независима и ведёт дружелюбную политику, благодаря чему вы можете повлиять на наше развитие.</p>
         </div>
       </section>
+
+      <section class="jumbotron text-center" style="background: rgba(52, 58, 64, .5); color: white;">
+<div class="container">
+        <!-- Example row of columns -->
+        <div class="row">
+
+          <div class="col-md-4 border-right">
+            <h2>6 764</h2>
+            <p>Ссумарно написано более 6764 строк кода</p>
+          </div>
+          <div class="col-md-4 border-right">
+            <h2>910</h2>
+            <p>Если напечатать дорожку из символов всего написанного кода 14 шрифтом, её длинна будет почти километр (910,42 метра)</p>
+          </div>
+          <div class="col-md-4">
+            <h2>10</h2>
+            <p>Выпито около 10 литров кофе во время работы над проектом</p>
+          </div>
+        </div>
+
+        <hr>
+
+      </div>
+    </section>
 
       <div class="album py-5" style="background: rgba(52, 58, 64, .5);">
         <div class="container">
@@ -205,55 +229,36 @@ body {
 
 
 
-<footer class="container py-5">
+<footer class="container border-top pt-5 mt-5">
       <div class="row">
         <div class="col-12 col-md">
           <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top mb-4" alt="">
-          <small class="d-block mb-3 text-muted">© 2017-2018</small>
+          <small class="d-block mb-3 text-muted">© 2021</small>
         </div>
         <div class="col-6 col-md">
-          <h5>Features</h5>
+          <h5>Контакты</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Cool stuff</a></li>
-            <li><a class="text-muted" href="#">Random feature</a></li>
-            <li><a class="text-muted" href="#">Team feature</a></li>
-            <li><a class="text-muted" href="#">Stuff for developers</a></li>
-            <li><a class="text-muted" href="#">Another one</a></li>
-            <li><a class="text-muted" href="#">Last time</a></li>
+            <li><a class="text-muted" href="#">Почта</a></li>
+            <li><a class="text-muted" href="#">Телеграмм</a></li>
+            <li><a class="text-muted" href="#">Инстаграмм</a></li>
+            <li><a class="text-muted" href="#">Вк</a></li>
           </ul>
         </div>
         <div class="col-6 col-md">
-          <h5>Resources</h5>
+          <h5></h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Resource</a></li>
-            <li><a class="text-muted" href="#">Resource name</a></li>
-            <li><a class="text-muted" href="#">Another resource</a></li>
-            <li><a class="text-muted" href="#">Final resource</a></li>
+            <li><a class="text-muted" href="#"></a></li>
+            <li><a class="text-muted" href="#"></a></li>
+            <li><a class="text-muted" href="#"></a></li>
+            <li><a class="text-muted" href="#"></a></li>
           </ul>
         </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Business</a></li>
-            <li><a class="text-muted" href="#">Education</a></li>
-            <li><a class="text-muted" href="#">Government</a></li>
-            <li><a class="text-muted" href="#">Gaming</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>About</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="#">Team</a></li>
-            <li><a class="text-muted" href="#">Locations</a></li>
-            <li><a class="text-muted" href="#">Privacy</a></li>
-            <li><a class="text-muted" href="#">Terms</a></li>
-          </ul>
-        </div>
+
       </div>
     </footer>
-#ff6400
+<!--#ff6400
 #0f0600
-#171717
+#171717-->
 
 
     <script>
