--- a/PO.html
+++ b/PO.html
@@ -96,7 +96,7 @@ body {
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand" href="index.html" style="color: #ff6400">
+  <a class="navbar-brand " href="index.html" style="color: #ff6400">
   <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top" alt="">
   QuRo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,39 +106,38 @@ body {
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Главная<span class="sr-only">(current)</span></a>
+        <a class="nav-link" style="color: #A9A9A9;" href="index.html">Главная<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="index.html#about">О нас</a>
+        <a class="nav-link text-secondary" href="index.html#about">О нас</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-secondary " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Коботы
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">QR-1</a>
-          <a class="dropdown-item disabled" href="#">QR-2</a>
+          <a class="dropdown-item text-secondary " href="#">QR-1</a>
+          <a class="dropdown-item disabled text-secondary " href="#">QR-2</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Документация</a>
-          <a class="dropdown-item" href="#"></a>
+          <a class="dropdown-item text-secondary " href="#">Документация</a>
+          <a class="dropdown-item text-secondary " href="#"></a>
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-secondary " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           ПО
         </a>
         <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Загрузить ПО</a>
-          <a class="dropdown-item disabled" href="#">Документация к ПО</a>
+          <a class="dropdown-item text-secondary " href="PO.html">Загрузить ПО</a>
+          <a class="dropdown-item disabled text-secondary " href="#">Документация к ПО</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Дополнительное ПО</a>
-          <a class="dropdown-item" href="#"></a>
+          <a class="dropdown-item text-secondary " href="#">Дополнительное ПО</a>
+          <a class="dropdown-item text-secondary " href="#"></a>
         </div>
       </li>
 
 
     </ul>
-
   </div>
   </nav>
 
@@ -204,6 +203,33 @@ body {
 
     </main>
 </div>
+<footer class="container mt-5 pt-5 border-top">
+      <div class="row">
+        <div class="col-12 col-md">
+          <img src="assets/img/QuRologo.png" width="30" height="30" class="d-inline-block align-top mb-4" alt="">
+          <small class="d-block mb-3 text-muted">© 2021</small>
+        </div>
+        <div class="col-6 col-md">
+          <h5>Контакты</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#">Почта</a></li>
+            <li><a class="text-muted" href="#">Телеграмм</a></li>
+            <li><a class="text-muted" href="#">Инстаграмм</a></li>
+            <li><a class="text-muted" href="#">Вк</a></li>
+          </ul>
+        </div>
+        <div class="col-6 col-md">
+          <h5></h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="#"></a></li>
+            <li><a class="text-muted" href="#"></a></li>
+            <li><a class="text-muted" href="#"></a></li>
+            <li><a class="text-muted" href="#"></a></li>
+          </ul>
+        </div>
+
+      </div>
+    </footer>
 <script>
   var num = Math.ceil(Math.random() * 7)
       document.body.background = 'assets/img/layer' + num + '.png'
