--- a/PO.html
+++ b/PO.html
@@ -210,7 +210,7 @@ body {
           <small class="d-block mb-3 text-muted">© 2021</small>
         </div>
         <div class="col-6 col-md">
-          <h5>Контакты</h5>
+          <h5 class="text-light">Контакты</h5>
           <ul class="list-unstyled text-small">
             <li><a class="text-muted" href="#">Почта</a></li>
             <li><a class="text-muted" href="#">Телеграмм</a></li>
